--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,6 +1,7 @@
 .about {
-  padding-top: 80px;
-  padding-bottom: 70px;
+  min-height: 455px;
+  padding-top: 82px;
+  padding-bottom: 56px;
 }
 
 @media (max-width: 1440px) {
@@ -12,6 +13,6 @@
 @media (max-width: 540px) {
   .about {
     padding-top: 53px;
-    padding-bottom: 40px;
+    padding-bottom: 28px;
   }
 }
