--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,11 +2,8 @@
   position: relative;
   width: 100%;
   min-height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-right: 142px;
-  padding-left: 160px;
+  padding-top: 20px;
+
   background-color: #000;
 
   &__logo {
@@ -24,9 +21,9 @@
   }
 
   &-nav {
+    margin-left: 169px;
 
     &__list {
-      width: 908px;
       display: flex;
       justify-content: space-between;
     }
@@ -35,20 +32,19 @@
 
       padding: 2px 6px 8px 6px;
 
-      &:nth-last-child() {
-        margin-left: 62px;
+      &:not(:first-child) {
+        margin-left: 51px;
       }
 
-      &:focus {
-        outline: 2px solid $active;
-      }
     }
+
 
     &__link {
       color: $white;
       font-size: 18px;
       font-weight: 600;
       cursor: pointer;
+      transition: color .2s ease;
 
       &:hover {
         color: $hover;
@@ -58,11 +54,17 @@
         color: $active;
       }
 
+
+      &:focus {
+        outline: 2px solid $active;
+      }
+
     }
   }
 
   &-sign {
-    margin-left: 100px;
+    margin-top: -6px;
+    margin-left: auto;
     color: $white;
     font-size: 18px;
     padding-left: 22px;
@@ -71,6 +73,7 @@
     background-repeat: no-repeat;
     background-position: 0 50%;
     cursor: pointer;
+    transition: color .15s ease;
 
     &:focus {
       outline: 2px solid $active;
@@ -119,21 +122,20 @@
 }
 
 
-@media (max-width: 1690px) {
+@media (max-width: 1650px) {
   .header {
     &-nav {
-
-      &__list {
-        width: 700px
-      }
+      margin-left: 100px;
 
       &__link {
         font-size: 16px;
       }
-    }
 
-    &-sign {
-      margin-left: 30px;
+      &__item {
+        &:not(:first-child) {
+          margin-left: 30px;
+        }
+      }
     }
   }
 }
@@ -141,11 +143,11 @@
 
 @media(max-width: 1440px) {
   .header {
-    padding-right: 33px;
-    padding-left: 50px;
+    padding-top: 28px;
 
     &__logo {
-      margin-left: 167px;
+      padding-left: 91px;
+      margin: 0 auto;
     }
 
     &-nav {
@@ -169,25 +171,21 @@
 }
 
 
-@media(max-width: 1000px) {
-  .header {
 
-    &__logo {
-      margin-left: 103px;
-    }
-  }
-}
 
 
 
 @media(max-width: 540px) {
   .header {
     min-height: 45px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-top: 11px;
+
+    &-nav {
+      margin-left: 0;
+    }
 
     &__logo {
-      margin-left: 52px;
+      padding-left: 0px;
     }
 
     &__img {
