--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -31,6 +31,7 @@ html .ui-button.ui-state-disabled:active {
 }
 
 .ui-accordion .ui-accordion-header {
+  position: relative;
   padding: 0;
 }
 
@@ -63,6 +64,7 @@ html .ui-button.ui-state-disabled:active {
   background-image: url('../icons/arrowDown.svg');
   background-size: 18px 12px;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 
