--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
 @import './variables';
 
 @import './normilize';
+@import './jquery-ui';
 @import './swiper.min';
+@import './simplebar';
 
 
 @import './base.scss';
