--- a/src/scss/_catalog.scss
+++ b/src/scss/_catalog.scss
@@ -9,6 +9,7 @@
 
   &-header {
     display: flex;
+    margin-bottom: 8px;
 
     &__flag {
       padding: 10px;
@@ -76,15 +77,12 @@
   }
 
   &__date {
-    margin-bottom: 0;
+    margin-bottom: 7px;
     font-weight: 400;
     font-size: 12px;
     color: #999;
   }
 
-  &-lists {
-    display: flex;
-  }
 
   &-accordion {
     width: 800px;
@@ -118,14 +116,12 @@
   }
 
   &-list {
-
-    &:not(:last-child) {
-      margin-right: 80px;
-    }
-
-    &:first-child {
-      margin-right: 65px;
-    }
+    display: flex;
+    flex-direction: column;
+    width: 758px;
+    height: 290px;
+    flex-wrap: wrap;
+    margin-left: 3px;
 
     &__item {
 
