--- a/src/scss/_select.scss
+++ b/src/scss/_select.scss
@@ -17,6 +17,7 @@
       text-indent: 15px;
       border: 1px solid #FFFFFF;
       border-radius: 6px;
+      cursor: pointer;
 
       &::after {
         content: "";
@@ -38,6 +39,7 @@
   &__dropdown {
     border: 1px solid #999999;
     border-radius: 6px;
+    cursor: pointer;
   }
 
   &__item {
